--- a/notebooks/data.ipynb
+++ b/notebooks/data.ipynb
@@ -50,6 +50,7 @@
     "axs = axs.reshape(nrows, ncols)\n",
     "num_samples = 10 # sample 10 but plot one for point and one for cycle\n",
     "sampler_type = 'random'\n",
+    "noise = 0.1\n",
     "\n",
     "for isys, sys in enumerate(syss):\n",
     "    print(sys)\n",
@@ -63,12 +64,18 @@
     "    fixed_pts = res['fixed_pts']\n",
     "    topos = res['topos']\n",
     "\n",
+    "    coords = DEs[0].coords_xy\n",
+    "    vectors += np.random.randn(*vectors.shape) * noise\n",
+    "            \n",
+    "\n",
+    "\n",
     "    labels = topo_point_vs_cycle(topos)\n",
     "    for icol, col in enumerate(labels.columns):\n",
     "        idx = np.where(labels[col] == 1)[0]\n",
     "        if len(idx) > 0:\n",
     "            idx = idx[0]\n",
-    "            DEs[idx].plot_trajectory(ax=axs[icol, isys])\n",
+    "            # DEs[idx].plot_trajectory(ax=axs[icol, isys])\n",
+    "            twa.dt.FlowSystemODE.plot_trajectory_2d_(coords, vectors[idx], ax=axs[icol, isys])\n",
     "\n",
     "        axs[icol, isys].set_yticks([])\n",
     "        axs[icol, isys].set_xticks([])\n",
