--- a/notebooks/pancreas.ipynb
+++ b/notebooks/pancreas.ipynb
@@ -46,9 +46,10 @@
     "# add attributes to adata\n",
     "\n",
     "outdir = '../output'\n",
+    "data_dir = os.path.join(outdir, 'datatrajs')\n",
     "\n",
     "if load:\n",
-    "    adata = sc.read_h5ad(os.path.join(outdir, 'data','pancreas', 'adata.h5'))\n",
+    "    adata = sc.read_h5ad(os.path.join(data_dir,'pancreas', 'adata.h5'))\n",
     "else:\n",
     "    adata = scv.datasets.pancreas()\n",
     "    # preprocessing\n",
@@ -144,7 +145,7 @@
     "adata.obs[splitby].unique()\n",
     "n_samples = len(samples)\n",
     "\n",
-    "data_dir = os.path.join(outdir, 'data', f'pancreas_{splitby}')\n",
+    "data_dir = os.path.join(data_dir, f'pancreas_{splitby}')\n",
     "\n",
     "if save:\n",
     "    ensure_dir(data_dir)\n"
@@ -157,11 +158,20 @@
    "outputs": [],
    "source": [
     "# plotting example vector fields and cell cycle score per cluster\n",
+    "import twa\n",
+    "\n",
+    "T = 100\n",
+    "alpha = 0.1\n",
+    "\n",
+    "T = 1000\n",
+    "alpha = 1\n",
+    "\n",
     "nrows = 2 \n",
     "ncols = min(n_samples // nrows, 4)\n",
     "\n",
     "fig, ax = plt.subplots(nrows, ncols, figsize=(ncols*5, nrows*5))\n",
     "fig2, ax2 = plt.subplots(nrows, ncols, figsize=(ncols*5, nrows*5))\n",
+    "fig3, ax3 = plt.subplots(nrows, ncols, figsize=(ncols*5, nrows*5))\n",
     "n_psamples = nrows * ncols\n",
     "\n",
     "for i, t in enumerate(samples):\n",
@@ -179,8 +189,27 @@
     "    legend_loc = None if i==0 else 'none'\n",
     "    scv.pl.scatter(sadata, color_gradients=['S_score', 'G2M_score'], smooth=True, show=False, ax=ax2[i//ncols, i%ncols], size=400,legend_fontsize=legend_fontsize, legend_loc=legend_loc) #perc=[5, 95], \n",
     "    ax2[i//ncols, i%ncols].set_title(ty, fontsize=fontsize)\n",
+    "\n",
+    "    init = coords[np.argmin(sadata.obs['velocity_pseudotime'])]\n",
+    "    traj = twa.dt.FlowSystemODE.integrate_vector_field(coords, vectors, T=T, alpha=alpha, init=init, plot=True, ax=ax3[i//ncols, i%ncols])\n",
+    "    \n",
+    "    \n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -191,14 +220,20 @@
     "# saving by pseudotime\n",
     "fig, ax = plt.subplots(nrows, ncols, figsize=(ncols*5, nrows*5))\n",
     "fig2, ax2 = plt.subplots(nrows, ncols, figsize=(ncols*5, nrows*5))\n",
+    "fig3, ax3 = plt.subplots(nrows, ncols, figsize=(ncols*5, nrows*5))\n",
     "\n",
     "all_vectors = []\n",
+    "all_trajs = []\n",
     "for i,t in enumerate(samples):\n",
     "    sadata = adata[adata.obs[splitby] == t]\n",
     "\n",
     "    cell_coords = sadata.obsm['X_umap']\n",
     "    cell_vectors = sadata.obsm['velocity_umap']\n",
     "    coords, vectors = interp_vectors(cell_coords, cell_vectors)\n",
+    "\n",
+    "    init = cell_coords[np.argmin(sadata.obs['velocity_pseudotime'])]\n",
+    "    trajs = twa.dt.FlowSystemODE.integrate_vector_field(coords, vectors, T=T, alpha=alpha, init=init, plot=False, ax=None)\n",
+    "\n",
     "    if i < n_psamples:\n",
     "        tit = sadata.obs['clusters'].iloc[0]\n",
     "        FlowSystemODE.plot_trajectory_2d_(coords=coords, vectors=vectors, title=tit, ax=ax[i//ncols, i%ncols], fontsize=fontsize)\n",
@@ -210,11 +245,28 @@
     "\n",
     "        ax[i//ncols, i%ncols].axis('off')\n",
     "        ax2[i//ncols, i%ncols].axis('off')\n",
+    "\n",
+    "    if i < n_psamples:\n",
+    "        traj = twa.dt.FlowSystemODE.integrate_vector_field(coords, vectors, T=T, alpha=alpha, init=init, plot=True, ax=ax3[i//ncols, i%ncols])\n",
+    "    \n",
     "    all_vectors.append(vectors)\n",
+    "    all_trajs.append(trajs)\n",
     "\n",
     "all_vectors = np.stack(all_vectors)\n",
+    "all_trajs = np.stack(all_trajs)\n",
+    "\n",
     "if save:\n",
-    "    np.save(os.path.join(data_dir, 'X_test.npy'), all_vectors)\n"
+    "    np.save(os.path.join(data_dir, 'X_test.npy'), all_vectors)\n",
+    "    np.save(os.path.join(data_dir, 'trajs_test.npy'), trajs)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save"
    ]
   },
   {
@@ -254,7 +306,7 @@
    "outputs": [],
    "source": [
     "if save:\n",
-    "    adata_dir = os.path.join(outdir, 'data', 'pancreas')\n",
+    "    adata_dir = os.path.join(data_dir, 'pancreas')\n",
     "    ensure_dir(adata_dir)\n",
     "    fname = os.path.join(adata_dir, 'adata.h5')\n",
     "    adata.write(fname)"
