--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -60,7 +60,7 @@
     "\n",
     "kwargs_train = {}\n",
     "\n",
-    "with_attention = False # True \n",
+    "with_attention = True \n",
     "datatype = 'angle'\n",
     "model_type = None\n",
     "\n",
@@ -167,10 +167,13 @@
     "exp_results_dir = os.path.join(results_dir, exp_desc)\n",
     "ensure_dir(exp_results_dir)\n",
     "\n",
+    "# test_data_descs = ['subcritical']\n",
+    "\n",
     "test_data_descs = [\n",
     "    'simple_oscillator_noaug',\n",
     "    'simple_oscillator_nsfcl',\n",
     "    'suphopf',\n",
+    "    'subhopf',\n",
     "    'lienard_poly',\n",
     "    'lienard_sigmoid',\n",
     "    'vanderpol',\n",
@@ -218,6 +221,16 @@
     "correct, auc, _ = predict_model(model, test_dataset, verbose=False, save=save, save_dir=save_dir)\n",
     "print(correct, auc)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test_dataset.plot_data()\n",
+    "model.plot_attention(test_dataset, n_samples=9)\n"
    ]
   },
   {
@@ -295,10 +308,9 @@
    "source": [
     "if save:\n",
     "    models_dir = os.path.join(outdir, 'models')\n",
-    "    exp_models_dir = os.path.join(models_dir, exp_desc)\n",
-    "    ensure_dir(exp_models_dir)\n",
-    "\n",
-    "    torch.save(model.state_dict(), os.path.join(exp_models_dir, 'model.pt'))"
+    "    # exp_models_dir = os.path.join(models_dir, exp_desc)\n",
+    "    ensure_dir(models_dir)\n",
+    "    torch.save(model.state_dict(), os.path.join(models_dir, f'{exp_desc}.pt'))"
    ]
   }
  ],
